[gd_scene load_steps=14 format=4 uid="uid://bv70ouxflgiq1"]

[ext_resource type="Script" uid="uid://ugynrqr1l7ib" path="res://scenes/Maps/house/house_bedroom.gd" id="1_3hvhm"]
[ext_resource type="PackedScene" uid="uid://b5ljrwmuctd3u" path="res://scenes/props/doors.tscn" id="1_h4fv6"]
[ext_resource type="PackedScene" uid="uid://dkhabu48y37ca" path="res://scenes/props/MusicScene.tscn" id="1_lrjha"]
[ext_resource type="PackedScene" uid="uid://cmxvf8myyfhsa" path="res://scenes/UI/actionable.tscn" id="1_w2yl7"]
[ext_resource type="Resource" uid="uid://cp0xiun5ebeky" path="res://dialogue/tutorial.dialogue" id="2_3hvhm"]
[ext_resource type="Texture2D" uid="uid://col7y354dtvnk" path="res://assets/handmade/tileset dom.png" id="2_lrjha"]
[ext_resource type="PackedScene" uid="uid://dba6tbl6tl0go" path="res://scenes/player.tscn" id="3_j6jlh"]
[ext_resource type="PackedScene" uid="uid://bvmqjptcybqc0" path="res://scenes/props/player_body_camera.tscn" id="4_w2yl7"]
[ext_resource type="Resource" uid="uid://i14fhfqel8fp" path="res://dialogue/Player.dialogue" id="7_07bbs"]
[ext_resource type="Resource" uid="uid://bghfdpt778kxp" path="res://dialogue/Day3.dialogue" id="8_pdjai"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_07bbs"]
texture = ExtResource("2_lrjha")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
0:6/0 = 0
1:6/0 = 0
0:7/0 = 0
1:7/0 = 0
0:8/0 = 0
1:8/0 = 0
0:9/0 = 0
1:9/0 = 0
0:10/0 = 0
1:10/0 = 0
7:1/0 = 0
7:2/0 = 0
8:2/0 = 0
8:3/0 = 0
8:4/0 = 0
8:5/0 = 0
7:5/0 = 0
7:4/0 = 0
7:3/0 = 0
8:1/0 = 0
6:4/0 = 0
5:4/0 = 0
4:4/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
1:11/0 = 0
1:12/0 = 0
1:13/0 = 0
1:16/0 = 0
0:16/0 = 0
0:13/0 = 0
0:12/0 = 0
0:11/0 = 0
2:12/0 = 0
2:13/0 = 0
2:14/0 = 0
2:15/0 = 0
2:16/0 = 0
2:17/0 = 0
7:0/0 = 0
8:0/0 = 0
1:3/0 = 0
1:2/0 = 0
1:1/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0
6:6/0 = 0
6:7/0 = 0
5:6/0 = 0
4:6/0 = 0
4:7/0 = 0
3:8/0 = 0
3:7/0 = 0
3:6/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
15:6/0 = 0
14:6/0 = 0
14:5/0 = 0
14:4/0 = 0
14:3/0 = 0
14:2/0 = 0
13:5/0 = 0
13:4/0 = 0
13:3/0 = 0
12:5/0 = 0
12:4/0 = 0
12:3/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
19:8/0 = 0
18:8/0 = 0
17:8/0 = 0
16:8/0 = 0
15:8/0 = 0
14:8/0 = 0
13:8/0 = 0
12:8/0 = 0
18:6/0 = 0
19:6/0 = 0
17:6/0 = 0
11:4/0 = 0
11:3/0 = 0
11:2/0 = 0
10:2/0 = 0
10:3/0 = 0
10:4/0 = 0
10:1/0 = 0
10:0/0 = 0
11:0/0 = 0
11:1/0 = 0
12:0/0 = 0
12:1/0 = 0
12:2/0 = 0
13:2/0 = 0
13:1/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
14:1/0 = 0
19:1/0 = 0
19:2/0 = 0
19:3/0 = 0
19:4/0 = 0
19:5/0 = 0
5:7/0 = 0
0:14/0 = 0
0:15/0 = 0
1:14/0 = 0
1:15/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
11:7/0 = 0
10:7/0 = 0
9:7/0 = 0
4:8/0 = 0
4:9/0 = 0
4:10/0 = 0
4:11/0 = 0
4:12/0 = 0
3:12/0 = 0
3:11/0 = 0
3:10/0 = 0
3:9/0 = 0
7:7/0 = 0
7:6/0 = 0
8:6/0 = 0
8:7/0 = 0
8:8/0 = 0
7:8/0 = 0

[sub_resource type="TileSet" id="TileSet_w740c"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_07bbs")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gwvap"]
size = Vector2(51, 56)

[node name="HouseLevel" type="Node2D"]
script = ExtResource("1_3hvhm")

[node name="MusicScene2" parent="." instance=ExtResource("1_lrjha")]
position = Vector2(-112, 64)
songs = 4
volume = 0.61
fade_in_time_msec = 10000
ambience = 4
amb_volume = 0.11
amb_fade_in_time_msec = 1000

[node name="HouseEntryDoor" parent="." instance=ExtResource("1_h4fv6")]
position = Vector2(-160, -48)
orientation = 1
next_scene = 3
id = 3

[node name="Tilesets" type="Node2D" parent="."]

[node name="PhysicsLayer" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, 2)
tile_map_data = PackedByteArray("AAAAAP//AQAEAAAAAAABAP//AQAEAAAAAAACAP//AQAEAAAAAAADAP//AQAEAAAAAAAFAP//AQAEAAAAAAAGAP//AQAEAAAAAAAHAP//AQAEAAAAAAAIAP//AQAEAAAAAAAJAP//AQAEAAAAAAAKAP//AQAEAAAAAAALAP//AQAEAAAAAAALAP7/AQAEAAAAAAALAP3/AQAEAAAAAAALAPz/AQAEAAAAAAALAPv/AQAEAAAAAAALAPr/AQAEAAAAAAALAPn/AQAEAAAAAAAKAPn/AQAEAAAAAAAJAPn/AQAEAAAAAAAIAPn/AQAEAAAAAAAGAPn/AQAEAAAAAAAHAPn/AQAEAAAAAAAFAPn/AQAEAAAAAAADAPn/AQAEAAAAAAABAPn/AQAEAAAAAAACAPn/AQAEAAAAAAAAAPn/AQAEAAAAAAAKAPr/AQAEAAAAAAAKAPv/AQAEAAAAAAAKAPz/AQAEAAAAAAAKAP3/AQAEAAAAAAAKAP7/AQAEAAAAAAD/////AQAEAAAAAAD+////AQAEAAAAAAD9////AQAEAAAAAAD8////AQAEAAAAAAD7////AQAEAAAAAAD6////AQAEAAAAAAD5////AQAEAAAAAAD4////AQAEAAAAAAD3////AQAEAAAAAAD2////AQAEAAAAAAD1////AQAEAAAAAAD1//7/AQAEAAAAAAD1//z/AQAEAAAAAAD1//3/AQAEAAAAAAD1//v/AQAEAAAAAAD1//r/AQAEAAAAAAD1//n/AQAEAAAAAAD2//n/AQAEAAAAAAD3//n/AQAEAAAAAAD4//n/AQAEAAAAAAD5//n/AQAEAAAAAAD6//n/AQAEAAAAAAD7//n/AQAEAAAAAAD8//n/AQAEAAAAAAD9//n/AQAEAAAAAAD+//n/AQAEAAAAAAD///n/AQAEAAAAAAD0//n/AQAEAAAAAAD0//r/AQAEAAAAAAD0//v/AQAEAAAAAAD0//z/AQAEAAAAAAD0//3/AQAEAAAAAAD0//7/AQAEAAAAAAD0////AQAEAAAAAAAEAPn/AQAEAAAAAAAEAPr/AQAEAAAAAAAEAPv/AQAEAAAAAAAEAPz/AQAEAAAAAAAEAP3/AQAEAAAAAAAEAP7/AQAEAAAAAAAEAP//AQAEAAAAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="Background" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAD0//v/AQAMAAAAAAD0//z/AQAMAAEAAAD0//3/AQAMAAIAAAD0//7/AQAMAAMAAAD0////AQAMAAQAAAD0/wAAAQAMAAUAAAD1//v/AQANAAAAAAD1//z/AQANAAEAAAD1//3/AQANAAIAAAD1//7/AQANAAMAAAD1////AQANAAQAAAD1/wAAAQANAAUAAAD1//r/AQAKAAAAAAD2//r/AQAKAAAAAAD3//r/AQAKAAAAAAD4//r/AQAKAAAAAAD5//r/AQAKAAAAAAD6//r/AQAKAAAAAAD7//r/AQAKAAAAAAD8//r/AQAKAAAAAAD9//r/AQAKAAAAAAD+//r/AQAKAAAAAAD///r/AQAKAAAAAAAAAPr/AQAKAAAAAAABAPr/AQAKAAAAAAACAPr/AQAKAAAAAAACAPv/AQAKAAAAAAD2//v/AQAKAAAAAAD3//v/AQAKAAAAAAD4//v/AQAKAAAAAAD5//z/AQAKAAAAAAD6//z/AQAKAAAAAAD7//z/AQAKAAAAAAD8//z/AQAKAAAAAAD9//3/AQAAAAgAAAD+//3/AQABAAgAAAD///3/AQAKAAAAAAD5//v/AQAKAAAAAAD5//3/AQAKAAAAAAD5//7/AQALAAAAAAD5////AQAEAAQAAAD6//v/AQAKAAAAAAD6//3/AQAKAAAAAAD6//7/AQALAAAAAAD6////AQAFAAQAAAD7//v/AQAKAAAAAAD7//3/AQAKAAAAAAD7//7/AQALAAAAAAD7////AQAGAAQAAAD8//v/AQAKAAAAAAD8//3/AQAKAAAAAAD8//7/AQALAAAAAAD8////AQAEAAQAAAD9//v/AQAKAAAAAAD9//z/AQAAAAcAAAD9//7/AQALAAAAAAD9////AQAFAAQAAAD+//v/AQAKAAAAAAD+//z/AQABAAcAAAD+//7/AQALAAAAAAD+////AQAGAAQAAAD///v/AQAKAAAAAAD///z/AQAKAAAAAAD///7/AQALAAAAAAD/////AQAEAAQAAAAAAPv/AQAKAAAAAAAAAPz/AQAKAAAAAAAAAP3/AQAKAAAAAAAAAP7/AQALAAAAAAAAAP//AQAFAAQAAAABAPv/AQAKAAAAAAABAPz/AQAKAAAAAAABAP3/AQAKAAAAAAABAP7/AQALAAAAAAABAP//AQAGAAQAAAACAPz/AQAKAAAAAAACAP3/AQAKAAAAAAACAP7/AQALAAAAAAACAP//AQAEAAQAAAADAPv/AQAKAAAAAAADAPz/AQAAAAcAAAADAP3/AQAAAAgAAAADAP7/AQALAAAAAAADAP//AQAFAAQAAAAEAPv/AQAKAAAAAAAEAPz/AQABAAcAAAAEAP3/AQABAAgAAAAEAP7/AQALAAAAAAAEAP//AQAGAAQAAAAFAPv/AQAKAAAAAAAFAPz/AQAKAAAAAAAFAP3/AQAKAAAAAAAFAP7/AQALAAAAAAAFAP//AQAEAAQAAAAGAPv/AQAKAAAAAAAGAPz/AQAKAAAAAAAGAP3/AQAKAAAAAAAGAP7/AQALAAAAAAAGAP//AQAFAAQAAAAHAPv/AQAKAAAAAAAHAPz/AQAKAAAAAAAHAP3/AQAKAAAAAAAHAP7/AQALAAAAAAAHAP//AQAGAAQAAAADAPr/AQAKAAAAAAAEAPr/AQAKAAAAAAAFAPr/AQAKAAAAAAAGAPr/AQAKAAAAAAD2//z/AQAKAAAAAAD2//3/AQAKAAAAAAD2//7/AQALAAAAAAD2////AQAEAAQAAAD3//z/AQAAAAgAAAD3//3/AQAAAAkAAAD3//7/AQALAAAAAAD3////AQAFAAQAAAD4//z/AQABAAgAAAD4//3/AQABAAkAAAD4//7/AQALAAAAAAD4////AQAGAAQAAAD2/wAAAQAEAAUAAAD3/wAAAQAFAAUAAAD4/wAAAQAGAAUAAAD5/wAAAQAEAAUAAAD6/wAAAQAFAAUAAAD7/wAAAQAGAAUAAAD8/wAAAQAEAAUAAAD9/wAAAQAFAAUAAAD+/wAAAQAGAAUAAAD//wAAAQAEAAUAAAAAAAAAAQAFAAUAAAABAAAAAQAGAAUAAAACAAAAAQAEAAUAAAADAAAAAQAFAAUAAAAEAAAAAQAGAAUAAAAFAAAAAQAEAAUAAAAGAAAAAQAFAAUAAAAHAAAAAQAGAAUAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="Asymmetrical Background" type="TileMapLayer" parent="Tilesets"]
position = Vector2(16, -24)
tile_map_data = PackedByteArray("AAD2//3/AQACAAAAAAD3//3/AQADAAAAAAD2//7/AQACAAAAAAD3//7/AQADAAAAAAACAP3/AQABAAAAAAADAP3/AQABAAAAAAADAP7/AQABAAAAAAACAP7/AQABAAAAAAD8//7/AQACAAAAAAD9//7/AQADAAAAAAD8//3/AQACAAAAAAD9//3/AQADAAAAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="SceneProps" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAD3//r/AQAAAA4AAAD3//v/AQAAAA8AAAD4//r/AQABAA4AAAD4//v/AQABAA8AAAD2//3/AQACAAwAAAD4//7/AQANAAcAAAD4////AQANAAgAAAD3//3/AQAOAAYAAAD3//7/AQAOAAcAAAD3////AQAOAAgAAAD7//z/AQAPAAYAAAD7//3/AQAPAAcAAAAAAPr/AQAAAA4AAAAAAPv/AQAAAA8AAAABAPr/AQABAA4AAAABAPv/AQABAA8AAAAEAP7/AQAJAAcAAAAEAP//AQAJAAgAAAAFAP7/AQAKAAcAAAAFAP//AQAKAAgAAAAGAP7/AQALAAcAAAAGAP//AQALAAgAAAACAP7/AQANAAcAAAACAP//AQANAAgAAAD9//7/AQANAAcAAAD9////AQANAAgAAAACAPz/AQAPAAYAAAACAP3/AQAPAAcAAAD///z/AQAPAAYAAAD///3/AQAPAAcAAAADAP7/AQAMAAcAAAADAP//AQAMAAgAAAD8//3/AQACAAwAAAAAAPz/AQADAAkAAAAAAP3/AQADAAoAAAAAAP7/AQADAAsAAAAAAP//AQADAAwAAAABAPz/AQAEAAkAAAABAP3/AQAEAAoAAAABAP7/AQAEAAsAAAABAP//AQAEAAwAAAD5//3/AQAHAAYAAAD5//7/AQAHAAcAAAD5////AQAHAAgAAAD6//3/AQAIAAYAAAD6//7/AQAIAAcAAAD6////AQAIAAgAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="SceneProps2" type="TileMapLayer" parent="Tilesets"]
tile_set = SubResource("TileSet_w740c")

[node name="SceneBorders" type="TileMapLayer" parent="Tilesets"]
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAD1//r/AQAKAAEAAAD2//r/AQALAAEAAAD3//r/AQAKAAEAAAD4//r/AQALAAEAAAD5//r/AQAKAAEAAAD6//r/AQALAAEAAAD7//r/AQAKAAEAAAD8//r/AQALAAEAAAD9//r/AQAKAAEAAAD+//r/AQALAAEAAAD///r/AQAKAAEAAAAAAPr/AQALAAEAAAABAPr/AQAKAAEAAAACAPr/AQALAAEAAAADAPr/AQAKAAEAAAAEAPr/AQALAAEAAAAFAPr/AQAKAAEAAAAGAPr/AQALAAEAAAAHAPr/AQALAAIAAAD0//r/AQAKAAIAAAAHAPv/AQALAAMAAAAHAP3/AQALAAMAAAAHAP7/AQALAAIAAAAHAPz/AQALAAIAAAAHAP//AQALAAMAAAA=")
tile_set = SubResource("TileSet_w740c")

[node name="SceneBorders2" type="TileMapLayer" parent="Tilesets"]
position = Vector2(-8, 8)
tile_set = SubResource("TileSet_w740c")

[node name="DayOne" type="Node2D" parent="."]

[node name="ActionableTutorial" parent="DayOne" instance=ExtResource("1_w2yl7")]
position = Vector2(-60.76426, -31.909836)
dialogue_resource = ExtResource("2_3hvhm")
automatic_interaction = true
can_be_completed = true

[node name="DayOneCompletion" parent="DayOne" instance=ExtResource("1_w2yl7")]
position = Vector2(56, -35)
monitoring = false
monitorable = false
dialogue_resource = ExtResource("7_07bbs")
dialogue_start = "end_day"
automatic_interaction = true
can_be_completed = true

[node name="DayTwo" type="Node2D" parent="."]

[node name="DayTwoBegin" parent="DayTwo" instance=ExtResource("1_w2yl7")]
position = Vector2(-60.76426, -31.909836)
dialogue_resource = ExtResource("7_07bbs")
dialogue_start = "begin_day"
automatic_interaction = true
can_be_completed = true

[node name="DayTwoCompletion" parent="DayTwo" instance=ExtResource("1_w2yl7")]
position = Vector2(56, -35)
monitoring = false
monitorable = false
dialogue_resource = ExtResource("7_07bbs")
dialogue_start = "end_day"
automatic_interaction = true
can_be_completed = true

[node name="DayThree" type="Node2D" parent="."]

[node name="EndingWithOutFriends" parent="DayThree" instance=ExtResource("1_w2yl7")]
position = Vector2(38, -33)
dialogue_resource = ExtResource("8_pdjai")
dialogue_start = "no_friend_end"
automatic_interaction = true
can_be_completed = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="DayThree/EndingWithOutFriends"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_gwvap")

[node name="Player" parent="." instance=ExtResource("3_j6jlh")]
position = Vector2(-2, -18)
is_jumping_allowed = false

[node name="PlayerBodyCamera" parent="Player" instance=ExtResource("4_w2yl7")]
position = Vector2(0, -40)
